--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,7 @@ footer{
 #account_email, #account_username, #account_password, #account_password1{
     pointer-events: none; 
 }
+.img_table{
+    width: 50px;
+    height: 50px;
+}
